add h1 with song title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-    <div class="container"></div>
+    <div class="container">
+        <h1>Anathema - Leave No Trace</h1>
+    </div>
 </head>
 <body>
     
