--- a/index.html
+++ b/index.html
@@ -6,15 +6,7 @@
     <title>Document</title>
     <div class="container">
         <h1>Anathema - Leave No Trace</h1>
-        <p>Born to the glare of the senses Spoon fed reality infused A new inherent Passive contentment You are so easily amused <br> Here and now We are gone in a heartbeat A dream in the Passage your time Chances are failing
-This world isn't waiting
-The moment is passing you by <br>
-
-Questions lie beneath the surface
-The fools are fooled once again
-Benign coincidence
-We stole our existence
-And gladly cast it to the wind <br> </p>
+        <p>Born to the glare of the senses Spoon fed reality infused A new inherent Passive contentment You are so easily amused <br> Here and now We are gone in a heartbeat A dream in the Passage your time Chances are failing This world isn't waiting The moment is passing you by <br> Questions lie beneath the surface The fools are fooled once again Benign coincidence We stole our existence And gladly cast it to the wind <br> Here and now We are gone in a heartbeat A dream in the passage of time <br> Chances are failing This world isn't waiting The moment is passing you by <br> Slowly spinning on the wind back home</p>
     </div>
 </head>
 
